Implement code endpoint
